# ebooks

./: .dockerignore  .env.example  .gitignore  .tailscale.env.example  Dockerfile  Dockerfile.download-proxy  abuse_protection.py  auth.py  bitwarden.py  config.py  deploy.sh  docker-compose.yml  download_flow.py  download_proxy.py  download_with_annas.py  download_with_annas_archive.py  download_with_libgen.py  ebookarr.service  exceptions.py  main.py  pyproject.toml  readme.md  requirements.txt  runtime_bootstrap.py  service.py  service.pyw  setup.py  utils.py
.cursor/: api design.md  app design.md
.cursor/rules/: alpine-js-job-status.mdc  auth-patterns.mdc  docker-tailscale-funnel.mdc  logs.mdc  no-unsolicited-processes.mdc  project-architecture.mdc  selenium-firefox-downloads.mdc  supabase-auth-patterns.mdc  uv-run-commands.mdc
.cursor/skills/debug-logs/: SKILL.md
.cursor/skills/frontend-design/: SKILL.md
.cursor/skills/plan-driven-implementation/: SKILL.md
.cursor/skills/run-e2e-tests/: SKILL.md
static/: index.html
tailscale/: bootstrap.sh
tests/: conftest.py  test_abuse_protection.py  test_auth.py  test_bitwarden.py  test_download_flow.py  test_download_recovery.py  test_e2e.py  test_service_auth.py  test_utils.py
