[project]
name = "ebookarr"
version = "1.0.0"
description = "FastAPI server that downloads ebooks from Goodreads URLs and sends them to Kindle"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.12.15",
    "authlib>=1.6.9",
    "beautifulsoup4>=4.12",
    "email-validator>=2.0",
    "fastapi==0.116.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "pydantic-settings>=2.0",
    "pyjwt[crypto]>=2.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "selenium==4.35.0",
    "uvicorn==0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "e2e: end-to-end tests requiring network access and credentials",
]
